--- a/pomodoro.html
+++ b/pomodoro.html
@@ -16,8 +16,9 @@
       <div class="pomodoro-number-box">
         <span class="pomodoro-timer">25:00</span>
       </div>
-      <div class="pomodoro-start-box">
-        <button class="pomodoro-start">start</button>
+      <div class="pomodoro-buttons">
+        <button class="pomodoro-buttons-start">start</button>
+        <button class="pomodoro-buttons-stop">stop</button>
       </div>
     </div>
   </div>
