Add pause/restart/continue buttons and js!

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -21,6 +21,8 @@
       <div class="pomodoro-buttons">
         <button id="pomodoro-start">start</button>
         <button id="pomodoro-pause" class="hide">pause</button>
+        <button id="pomodoro-continue" class="hide">continue</button>
+        <button id="pomodoro-restart" class="hide">restart</button>
         <button id="pomodoro-stop" class="hide">stop</button>
       </div>
     </div>
